[API] Adding ETag header to endpoints